samples/_failures_safe/1761419181_738ae6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09df068a.c: In function ‘main’:
./samples/SAFE/__tmp_09df068a.c:166:25: error: expected ‘;’ at end of input
  166 |                 return 0
      |                         ^
      |                         ;
./samples/SAFE/__tmp_09df068a.c:166:17: error: expected declaration or statement at end of input
  166 |                 return 0
      |                 ^~~~~~
./samples/SAFE/__tmp_09df068a.c:166:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_09df068a.c:166:17: error: expected declaration or statement at end of input
